--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <ul class="menu-down">
                     <li class="reg"><a class="red" href="#">Регистрация</a></li>
                     <li class="login"><a class="blue" href="#">Войти</a></li>
+                    <li class="search_btn"><a href="#"><img src="img/search1.svg" alt=""></a></li>
                     <li class="ml-40"><a href="#"><img src="img/message.svg" alt=""></a></li>
                     <li><a href="#"><img src="img/heart.svg" alt=""></a></li>
                     <li><a href="#"><img src="img/cart.svg" alt=""></a></li>
@@ -89,6 +90,23 @@
                 </div>
             </div>
         </div>
+        <div class="search-block">
+            <div class="search-form">
+                <form>
+                    <input type="search" placeholder="Поиск по сайту..." class="form-control">
+                    <a class="search-close"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="1" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <line x1="18" y1="6" x2="6" y2="18" />
+                        <line x1="6" y1="6" x2="18" y2="18" />
+                    </svg></a>
+                </form>
+            </div>
+            <div class="search-result active" >
+                <div class="search-result-group">
+                    <div class="group-items"><a href="#"><span>Шлепанцы, сабо и мюли женские </span><mark>Ef</mark><span>fa</span></a><a href="#"><span>Строительная техника </span><mark>Ef</mark><span>ko</span></a><a href="#"><span>Субстраты для растений Ultra </span><mark>Ef</mark><span>fect</span></a><a href="#"><span>Сандалии мужские </span><mark>Ef</mark><span>fa</span></a><a href="#"><span>Фотоаппараты Canon EOS 250D </span><mark>EF</mark><span>-S 18-55 IS STM</span></a><a href="#"><span>Фотоаппараты Canon EOS M100 </span><mark>EF</mark><span>-M15-45 IS STM Kit</span></a><a href="#"><span>Беззеркальные фотоаппараты Canon EOS M100 </span><mark>EF</mark><span>-M15-45 IS STM Kit</span></a></div>
+                </div>
+            </div>
+        </div>
         <div class="mobile-menu">
             <div class="toggle-block-backdrop"></div>
             <div class="top-nav">
@@ -99,7 +117,6 @@
                     </svg></div>
                 <div class="top-nav-content">
                     <ul class="menu">
-
                         <li>
                             <div class="section-title"><a class="red" href="#">Регистрация</a></div>
                         </li>
@@ -602,7 +619,6 @@
                         <li>
                             <div class="section-title"><a href="#">г.Ташкент</a></div>
                         </li>
-                       
                     </ul>
                 </div>
             </div>
