--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
     <title>PochtaShop</title>
 </head>
 
-<body class="login_page">
+<body>
     <header class="header">
         <div class="header-container">
             <a href="#" class="navbar-toggle">
@@ -626,8 +626,310 @@
     </header>
     <section class="mt-60 mb-60">
         <div class="container">
+            <div class="ant-breadcrumb">
+                <span class=""><span class="ant-breadcrumb-link"><a href="">Главная</a></span><span class="ant-breadcrumb-separator">/</span></span><span class=""><span class="ant-breadcrumb-link"><a href="">Электроника</a></span><span class="ant-breadcrumb-separator">/</span></span><span class=""><span class="ant-breadcrumb-link"><a href="">Смартфоны и телефоны</a></span><span class="ant-breadcrumb-separator">/</span></span><span class=""><span class="ant-breadcrumb-link">Xiaomi</span></span></div>
+            <h1 class="title">Xiaomi / Смартфон Redmi Note 8 Pro 6/64GB: 6.53'' 2340x1080 IPS/Helio G90T/6Gb/64Gb 64+8+2+2Mp/20Mp 4500mAh</h1>
+            <div class="row">
+                <div class="col-lg-8 mb-30">
+                    <div class="productimagewrap">
+                        <div class="product_img_s">
+                            <a class="active" href="#"><img src="img/product_s.png" alt=""></a>
+                            <a href="#"><img src="img/product_s.png" alt=""></a>
+                            <a href="#"><img src="img/product_s.png" alt=""></a>
+                            <a href="#"><img src="img/product_s.png" alt=""></a>
+                        </div>
+                        <div class="product_img_l">
+                            <a href="#"><img src="img/product_l.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-30">
+                    <div class="product_price">
+                        <span class="new">2 700 000 <span class="sum">сум</span></span>
+                        <span class="old">3 200 000 сум</span>
+                    </div>
+                    <ul class="product_param">
+                        <li>Артикул: 9512861</li>
+                        <li>Купили более 3500 раз</li>
+                    </ul>
+                    <ul class="product_variant">
+                        <li class="active"><a href="#"><img src="img/product_m.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/product_m.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/product_m.png" alt=""></a></li>
+                    </ul>
+                    <div class="product-details-action">
+                        <div class="cart-plus-minus">
+                            <input type="text" value="1">
+                            <div class="dec qtybutton">-</div>
+                            <div class="inc qtybutton">+</div>
+                        </div>
+                        <button class="details-action-icon" type="submit">
+                            <svg width="20" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M21.6328 6.64714C21.3187 5.91972 20.8657 5.26055 20.2992 4.70651C19.7323 4.15082 19.064 3.70922 18.3305 3.40573C17.5699 3.08978 16.7541 2.92805 15.9305 2.92995C14.775 2.92995 13.6477 3.24635 12.668 3.84401C12.4336 3.98698 12.2109 4.14401 12 4.3151C11.7891 4.14401 11.5664 3.98698 11.332 3.84401C10.3523 3.24635 9.225 2.92995 8.06953 2.92995C7.2375 2.92995 6.43125 3.08932 5.66953 3.40573C4.93359 3.71042 4.27031 4.1487 3.70078 4.70651C3.13359 5.25992 2.6805 5.91925 2.36719 6.64714C2.04141 7.40417 1.875 8.20807 1.875 9.03542C1.875 9.81589 2.03438 10.6292 2.35078 11.4565C2.61563 12.1479 2.99531 12.8651 3.48047 13.5893C4.24922 14.7354 5.30625 15.9307 6.61875 17.1424C8.79375 19.151 10.9477 20.5385 11.0391 20.5948L11.5945 20.951C11.8406 21.1081 12.157 21.1081 12.4031 20.951L12.9586 20.5948C13.05 20.5362 15.2016 19.151 17.3789 17.1424C18.6914 15.9307 19.7484 14.7354 20.5172 13.5893C21.0023 12.8651 21.3844 12.1479 21.6469 11.4565C21.9633 10.6292 22.1227 9.81589 22.1227 9.03542C22.125 8.20807 21.9586 7.40417 21.6328 6.64714ZM12 19.0971C12 19.0971 3.65625 13.751 3.65625 9.03542C3.65625 6.64714 5.63203 4.7112 8.06953 4.7112C9.78281 4.7112 11.2688 5.66745 12 7.06432C12.7312 5.66745 14.2172 4.7112 15.9305 4.7112C18.368 4.7112 20.3438 6.64714 20.3438 9.03542C20.3438 13.751 12 19.0971 12 19.0971Z" fill="black" />
+                            </svg>
+                        </button>
+                        <button class="details-action-icon" type="submit">
+                            <svg width="20" height="22" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M13.333 14.167V12.5H15v1.667h1.667v1.666H15V17.5h-1.667v-1.667h-1.666v-1.666h1.666zm-10 0H10v1.666H3.333v-1.666zm0-10h13.334v1.666H3.333V4.167zm0 5h13.334v1.666H3.333V9.167z" fill="#black" fill-rule="evenodd" /></svg>
+                        </button>
+                        <div class="details-cart">
+                            <button class="ant-btn ant-btn-primary">В корзину</button>
+                        </div>
+                    </div>
+                    <div class="product-info-list ">
+                        <ul>
+                            <li>Ваш регион: <strong>Ташкент</strong></li>
+                            <li><img src="img/brand.png" alt=""></li>
+                            <li><strong>Доставка бесплатная</strong> от 500 000 сум</li>
+                            <li><strong>Срочная доставка</strong> 25 000 сум</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-30">
+                <div class="col-lg-8 mb-30">
+                    <div class="block_title">Описание товара</div>
+                    <div class="product_desc block-w p-20">
+                        <p>64 Мп. Четыре камеры. Сверхширокоугольный объектив. Делайте снимки всего пейзажа одним нажатием. Сверхвысокое разрешение. Каждая деталь имеет значение. Объектив с дистанцией фокусировки 2 см. Невероятные возможности макросъемки. Быстрый процессор Helio G90T с системой жидкостного охлаждения. Быстрая зарядка 18 Вт. Аккумулятор 4500 мАч. 6,53" FHD+ дисплей с каплевидным вырезом.</p>
+                        <a href="#" class="read_more">Показать польностью</a>
+                        <hr>
+                        <h3 class="sub_title">Общие характеристики</h3>
+                        <table class="product_table maxw-350">
+                            <tr>
+                                <td>
+                                    Гарантийный срок </td>
+                                <td>1год
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Модель</td>
+                                <td>Redmi Note 8 Pro 6/64GB
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Тип</td>
+                                <td>SIM картыnano SIM
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Версия операционной системы</td>
+                                <td>Android 9.0</td>
+                            </tr>
+                        </table>
+                        <a href="#" class="read_more">Показать польностью</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-30">
+                    <div class="block_title">С этим товаром покупают</div>
+                    <div class="block-w small_product">
+                        <div class="single_product">
+                            <div class="product_thumb">
+                                <a class="product_img_link" href="#"><img src="image/product.png" alt=""></a>
+                                <div class="label_product">
+                                    <span class="label_sale">суперцена</span>
+                                </div>
+                            </div>
+                            <div class="product_content">
+                                <div class="product_content_inner">
+                                    <h4 class="product_name"><a href="#">Фотоаппарат системный Sony Alpha7 III ILCE-7M3K/BC</a></h4>
+                                    <div class="price_box">
+                                        <span class="current_price">1 800 900 сум</span>
+                                        <span class="old_price">1 800 900 сум</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="single_product">
+                            <div class="product_thumb">
+                                <a class="product_img_link" href="#"><img src="image/product3.png" alt=""></a>
+                                <div class="label_product">
+                                    <span class="label_sale">суперцена</span>
+                                </div>
+                            </div>
+                            <div class="product_content">
+                                <div class="product_content_inner">
+                                    <h4 class="product_name"><a href="#">Смарт-часы Samsung Galaxy Watch A</a></h4>
+                                    <div class="price_box">
+                                        <span class="current_price">1 800 900 сум</span>
+                                        <span class="old_price">1 800 900 сум</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="single_product">
+                            <div class="product_thumb">
+                                <a class="product_img_link" href="#"><img src="image/product2.png" alt=""></a>
+                                <div class="label_product">
+                                    <span class="label_sale">суперцена</span>
+                                </div>
+                            </div>
+                            <div class="product_content">
+                                <div class="product_content_inner">
+                                    <h4 class="product_name"><a href="#">Фотоаппарат системный Sony Alpha7 III ILCE-7M3K/BC</a></h4>
+                                    <div class="price_box">
+                                        <span class="current_price">1 800 900 сум</span>
+                                        <span class="old_price">1 800 900 сум</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row products">
+                <div class="col-md-3 col-6">
+                    <div class="single_product">
+                        <div class="product_thumb">
+                            <a class="product_img_link" href="#"><img src="image/product.png" alt=""></a>
+                            <div class="label_product">
+                                <span class="label_sale">суперцена</span>
+                            </div>
+                        </div>
+                        <div class="product_content">
+                            <div class="product_content_inner">
+                                <h4 class="product_name"><a href="#">Фотоаппарат системный Sony Alpha7 III ILCE-7M3K/BC</a></h4>
+                                <div class="price_box">
+                                    <span class="current_price">1 800 900 сум</span>
+                                    <span class="old_price">1 800 900 сум</span>
+                                </div>
+                                <div class="add_to_cart">
+                                    <a href="#">Добавить в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="single_product">
+                        <div class="product_thumb">
+                            <a class="product_img_link" href="#"><img src="image/product1.png" alt=""></a>
+                            <div class="label_product">
+                                <span class="label_new">новинка</span>
+                            </div>
+                        </div>
+                        <div class="product_content">
+                            <div class="product_content_inner">
+                                <h4 class="product_name"><a href="#">LED Телевизор Full HD Philips 22PFS5304/60</a></h4>
+                                <div class="price_box">
+                                    <span class="current_price">1 800 900 сум</span>
+                                </div>
+                                <div class="add_to_cart">
+                                    <a href="#">Добавить в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="single_product">
+                        <div class="product_thumb">
+                            <a class="product_img_link" href="#"><img src="image/product2.png" alt=""></a>
+                            <div class="label_product">
+                                <span class="label_sale">суперцена</span>
+                            </div>
+                        </div>
+                        <div class="product_content">
+                            <div class="product_content_inner">
+                                <h4 class="product_name"><a href="#">Фотоаппарат системный Sony Alpha7 III ILCE-7M3K/BC</a></h4>
+                                <div class="price_box">
+                                    <span class="current_price">1 800 900 сум</span>
+                                    <span class="old_price">1 800 900 сум</span>
+                                </div>
+                                <div class="add_to_cart">
+                                    <a href="#">Добавить в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-6">
+                    <div class="single_product">
+                        <div class="product_thumb">
+                            <a class="product_img_link" href="#"><img src="image/product3.png" alt=""></a>
+                            <div class="label_product">
+                                <span class="label_sale">суперцена</span>
+                            </div>
+                        </div>
+                        <div class="product_content">
+                            <div class="product_content_inner">
+                                <h4 class="product_name"><a href="#">Смарт-часы Samsung Galaxy Watch A</a></h4>
+                                <div class="price_box">
+                                    <span class="current_price">1 800 900 сум</span>
+                                    <span class="old_price">1 800 900 сум</span>
+                                </div>
+                                <div class="add_to_cart">
+                                    <a href="#">Добавить в корзину</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-5 col-sm-12">
+                    <div class="widget">
+                        <a href="#" class="f_logo mb-15">PochtaMarket.uz</a>
+                        <p>Документы и связанные с ними графические изображения, расположенные на Сайте, могут включать неточности или орфографические ошибки. Изменение информации на Сайте производится периодически.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-6">
+                    <div class="widget">
+                        <div class="widget_title">
+                            Почта.Маркетплейс
+                        </div>
+                        <div class="footer_menu">
+                            <ul>
+                                <li><a href="#">О проекте</a></li>
+                                <li><a href="#">Контакты</a></li>
+                                <li><a href="#">Реквизиты</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-6">
+                    <div class="widget">
+                        <div class="widget_title">
+                            Продавцам
+                        </div>
+                        <div class="footer_menu">
+                            <ul>
+                                <li><a href="#">Подключение</a></li>
+                                <li><a href="#">Тарифы</a></li>
+                                <li><a href="#">Возможности</a></li>
+                                <li><a href="#">Кабинет</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-5 col-12">
+                    <div class="widget">
+                        <div class="widget_title">
+                            Покупателям
+                        </div>
+                        <div class="footer_menu">
+                            <ul>
+                                <li><a href="#">Защита покупателя</a></li>
+                                <li><a href="#">Доставка</a></li>
+                                <li><a href="#">Поддержка</a></li>
+                                <li><a href="#">Политика конфиденциальности</a></li>
+                                <li><a href="#">Условия использования сайта</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-7 col-12">
+                    <div class="widget">
+                        <p class="copyright">© 2020 ООО "POCHTA".<br>Авторские права защищены.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 
